--- a/.gitignore
+++ b/.gitignore
@@ -80,7 +80,8 @@ out
 
 # Nuxt.js build / generate output
 .nuxt
-dist
+# we need the dist folder for the front end:
+# dist
 
 # Gatsby files
 .cache/
