--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "backend serving notes",
   "main": "index.js",
   "scripts": {
+    "build:ui": "@powershell Remove-Item -Recurse -Force dist && cd ../notesFrontend && npm run build && @powershell Copy-Item dist -Recurse ../notesBackendTest",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild ",
     "start": "node index.js",
     "dev": "node --watch index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
